# Kern

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTIBUTING.md  Cargo.toml  README.md  SECURITY.md
config/: default.toml
daemon/: Cargo.toml
daemon/src/: config.rs  hotkey.rs  ipc.rs  main.rs  server.rs
docs/: git-basics.md
engine/: Cargo.toml
engine/examples/: test_search.rs
engine/src/: index.rs  lib.rs  parser.rs  search.rs
overlay/: index.html  package-lock.json  package.json
overlay/src/: App.svelte
overlay/src-tauri/: Cargo.toml  tauri.conf.json
overlay/src-tauri/src/: lib.rs
test_index/: .managed.json  meta.json
