[package]
name = "kern-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tantivy = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
walkdir = "2"
pulldown-cmark = "0.11"
fuzzy-matcher = "0.3"

[dev-dependencies]
tracing-subscriber = { workspace = true }